# serializer version: 1
# name: test_aggregation_built_once_across_filter_and_order_by[session-async-tracked-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 sum(fruit_2.sweetness) AS sum_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY anon_1.count_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-async-tracked-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 sum(fruit_2.sweetness) AS sum_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > %s
   ORDER BY anon_1.count_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1,
                 sum(fruit_2.sweetness) AS sum_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > $1::INTEGER
   ORDER BY anon_1.count_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1,
                 sum(fruit_2.sweetness) AS sum_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY anon_1.count_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1,
                 sum(fruit_2.sweetness) AS sum_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY anon_1.count_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_built_once_across_filter_and_order_by[session-sync-tracked-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 sum(fruit_2.sweetness) AS sum_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY anon_1.count_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-float-avg-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-float-avg-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-float-avg-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 = $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-float-avg-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-float-avg-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-float-avg-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-float-avg-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 > $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-float-avg-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-int-avg-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-int-avg-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-int-avg-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 = $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-int-avg-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-int-avg-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-int-avg-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-int-avg-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 > $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-async-tracked-int-avg-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-sync-tracked-float-avg-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-sync-tracked-float-avg-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-sync-tracked-float-avg-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-sync-tracked-float-avg-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-sync-tracked-int-avg-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-sync-tracked-int-avg-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-sync-tracked-int-avg-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.avg_1 > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_avg_aggregation_filter[session-sync-tracked-int-avg-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.avg_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 > $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-gte-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 >= ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-gte-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 >= %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-gte-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 >= $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-gte-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 >= %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-in-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-in-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-in-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-in-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-lt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 < ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-lt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 < %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-lt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 < $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-lt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 < %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-lte-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 <= ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-lte-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 <= %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-lte-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 <= $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-lte-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 <= %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-neq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 != ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-neq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 != %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-neq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 != $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-neq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 != %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-nin-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.count_1 NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-nin-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.count_1 NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-nin-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.count_1 NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-async-tracked-nin-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.count_1 NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-gte-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 >= %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-gte-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 >= ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-in-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-in-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 IN (__[POSTCOMPILE_param_1])
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-lt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 < %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-lt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 < ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-lte-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 <= %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-lte-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 <= ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-neq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 != %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-neq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 != ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-nin-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.count_1 NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter[session-sync-tracked-nin-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.count_1 NOT IN (__[POSTCOMPILE_param_1]))
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-async-tracked-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-async-tracked-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > %s
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > $1::INTEGER
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_count_aggregation_filter_nested_under_or[session-sync-tracked-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-default-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-default-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-default-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-default-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-distinct-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(DISTINCT fruit_1.name) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-distinct-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(DISTINCT fruit_1.name) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-distinct-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-distinct-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-non-distinct-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-non-distinct-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-non-distinct-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-async-tracked-non-distinct-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-sync-tracked-default-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-sync-tracked-default-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-sync-tracked-distinct-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-sync-tracked-distinct-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(DISTINCT fruit_1.name) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-sync-tracked-non-distinct-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 = %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-sync-tracked-non-distinct-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.name) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-contains-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_1 LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-contains-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_1 LIKE concat('%%', %s, '%%') ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-contains-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_1 LIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-contains-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_1 LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_1 = $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_1 = %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-ilike-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.max_1) LIKE lower(?)
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-ilike-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.max_1) LIKE lower(%s)
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-ilike-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_1 ILIKE $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-ilike-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_1 ILIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-like-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_1 LIKE ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-like-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_1 LIKE %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-like-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_1 LIKE $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-like-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_1 LIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-startswith-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_1 LIKE ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-startswith-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_1 LIKE concat(%s, '%%') ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-startswith-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_1 LIKE $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-async-tracked-startswith-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_1 LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-contains-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_1 LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-contains-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_1 LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_1 = %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-ilike-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_1 ILIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-ilike-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.max_1) LIKE lower(?)
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-like-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.max_1 LIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-like-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.max_1 LIKE ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-startswith-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.max_1 LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_string_aggregation_filter[session-sync-tracked-startswith-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.max_1 LIKE ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-contains-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_1 LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-contains-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_1 LIKE concat('%%', %s, '%%') ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-contains-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_1 LIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-contains-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_1 LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_1 = $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_1 = %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-ilike-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.min_1) LIKE lower(?)
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-ilike-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.min_1) LIKE lower(%s)
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-ilike-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_1 ILIKE $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-ilike-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_1 ILIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-like-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_1 LIKE ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-like-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_1 LIKE %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-like-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_1 LIKE $1::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-like-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_1 LIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-startswith-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_1 LIKE ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-startswith-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_1 LIKE concat(%s, '%%') ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-startswith-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_1 LIKE $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-async-tracked-startswith-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_1 LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-contains-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_1 LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-contains-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_1 LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_1 = %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-ilike-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_1 ILIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-ilike-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE lower(anon_1.min_1) LIKE lower(?)
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-like-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.min_1 LIKE %(param_1)s::VARCHAR
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-like-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.min_1 LIKE ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-startswith-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE (anon_1.min_1 LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_string_aggregation_filter[session-sync-tracked-startswith-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE (anon_1.min_1 LIKE ? || '%' ESCAPE '/')
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-float-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-float-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-float-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 = $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-float-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-float-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-float-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-float-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 > $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-float-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-int-eq-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-int-eq-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-int-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 = $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-int-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-int-gt-match-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-int-gt-match-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-int-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 > $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-async-tracked-int-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-sync-tracked-float-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-sync-tracked-float-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-sync-tracked-float-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-sync-tracked-float-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-sync-tracked-int-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 = %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-sync-tracked-int-eq-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-sync-tracked-int-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 > %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation_filter[session-sync-tracked-int-gt-match-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 > ?
   ORDER BY color.id ASC
  '''
# ---
